# model_sat_OOP

./: README.md  pyproject.toml  requirements.txt  setup.py
examples/: Plot_Collocated.ipynb
model_sat/: R09b_collocated_5.nc  collocate.py  collocate_OLD.py  collocation.py  get_sat.py  model.py  output.py  run_collocation.py  satellite.py  temporal.py  test_run.py
model_sat/Collocation/: collocate.py  output.py  spatial.py
model_sat/Model/: model.py
model_sat/Satellite/: get_sat.py  satellite.py
